--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-native-gesture-handler": "~1.6.0",
     "react-native-paper": "^3.9.0",
     "react-native-vector-icons": "^6.6.0",
-    "react-native-web": "~0.11.7"
+    "react-native-video": "^4.4.5",
+    "react-native-web": "~0.11.7",
+    "react-native-webview": "^9.4.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.1.0",
